# HigherHarmonics

./: CMakeLists.txt  CMakePresets.json  Makefile  batch_array.sh  batch_modes.sh  cascade_batcher.sh  cascade_exp_batcher.sh  cascade_exp_test.sh  cl9_exp_batcher.sh  dcos_test_run.sh  dgauss_test_run.sh  exec.sh  exp_batcher.sh  experiment_test_run.sh  icelake_batcher.sh  icelake_exp_test.sh  run_multiples.sh
cmake/: CascadelakeCompilerFlags.cmake  ClusterCompilerFlags.cmake  DefaultCompilerFlags.cmake  IcelakeCompilerFlags.cmake  SelectClusterBuildOptions.cmake  hhg_options.cmake
helper/: experimental_pulse.py  extend_pulse_to_zero.py  magnus.md  magnus_dirac.py  magnus_general.md  magnus_general.py  piflux_initial_conditions.py
params/: cascade_experiment.config  cascade_experiment_A.config  cascade_experiment_B.config  cl1_experiment.config  cl1_experiment_A.config  cl1_experiment_B.config  cluster.config  dcos.config  dgauss.config  experiment.config  icelake_experiment.config  icelake_experiment_A.config  icelake_experiment_B.config  occupations.config  params.config  split_current.config  test.config  wang.config
slurm/: cascade_experiment.slurm  cascade_experimentA.slurm  cascade_experimentB.slurm  cl9_experiment.slurm  cl9_experimentA.slurm  cl9_experimentB.slurm  experiment.slurm  experimentA.slurm  experimentB.slurm  hhg.slurm  high_performance.slurm  icelake_experiment.slurm  icelake_experimentA.slurm  icelake_experimentB.slurm  no_mpi.slurm
sources/: debug_output.cpp  dirac_alpha_beta.cpp  hhg.cpp  hhg_gauss.cpp  hhg_tanh_sinh.cpp
sources/HHG/: ComplexFFT.cpp  ComplexFFT.hpp  ContinuousLaser.hpp  DiracDispatcher.cpp  DiracDispatcher.hpp  DiracSystem.cpp  DiracSystem.hpp  Dispatcher.hpp  FFT.cpp  GeneralMagnus.cpp  GeneralMagnus.hpp  GlobalDefinitions.hpp  GreensFunction.cpp  GreensFunction.hpp  PiFlux.cpp  PiFlux.hpp  PiFluxDispatcher.cpp  PiFluxDispatcher.hpp  TimeIntegrationConfig.cpp  TimeIntegrationConfig.hpp  WelchWindow.hpp  thread_gauss.hpp
sources/HHG/DiracDetail/: MagnusMatrix.cpp  MagnusMatrix.hpp
sources/HHG/Dispatch/: CMakeLists.txt  DiracDispatcher.cpp  DiracDispatcher.hpp  Dispatcher.cpp  Dispatcher.hpp  HoneycombDispatcher.cpp  HoneycombDispatcher.hpp  PiFluxDispatcher.cpp  PiFluxDispatcher.hpp
sources/HHG/Fourier/: CMakeLists.txt  ComplexFFT.cpp  ComplexFFT.hpp  FFT.cpp  FFT.hpp  FourierIntegral.cpp  FourierIntegral.hpp  TrapezoidalFFT.cpp  TrapezoidalFFT.hpp  WelchWindow.hpp
sources/HHG/Laser/: CMakeLists.txt  ContinuousLaser.cpp  ContinuousLaser.hpp  CosineLaser.cpp  CosineLaser.hpp  DoubleCosine.cpp  DoubleLaser.hpp  ExperimentParams.hpp  ExperimentalLaser.cpp  ExperimentalLaser.hpp  GaussLaser.cpp  GaussLaser.hpp  Laser.cpp  Laser.hpp  PowerLawField.cpp  PowerLawField.hpp  QuenchedField.cpp  QuenchedField.hpp  _DoubleCosine.cpp  _DoubleCosine.hpp  gauss.hpp
sources/HHG/Systems/: CMakeLists.txt  DiracSystem.cpp  DiracSystem.hpp  Honeycomb.cpp  Honeycomb.hpp  ModifiedPiFlux.cpp  ModifiedPiFlux.hpp  OccupationContainer.hpp  PiFlux.cpp  PiFlux.hpp
sources/HHG/Systems/DiracDetail/: MagnusMatrix.cpp  MagnusMatrix.hpp
sources/HHG/preprocessors/: _DiracSystem.hpp
sources/hhg/: ContinuosLaser.cpp  ContinuousLaser.cpp  ContinuousLaser.hpp  DiracSystem.cpp  DiracSystem.hpp  FFT.hpp  GlobalDefinitions.hpp  GreensFunction.cpp  GreensFunction.hpp  Laser.cpp  Laser.hpp  TimeIntegrationConfig.hpp
tests/: single_k_point.cpp
